--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -19,29 +19,7 @@
       <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
       <title>NSCC - Ride Sharing</title>
     </head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
-      <!-- Boostrap CSS link-->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-      <!-- Boostrap JS -->
-      <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
-      <title>NSCC - Ride Sharing</title>
-    </head>
     <body>
-      <!-- Webpage Content -->
-      <header>
-        <div class="container_header">
-          <h1>Welcome to Your Ride Sharing</h1>
-        </div>
-      </header>
-      <!-- Navigation Bar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <div id="nscc_logo">
-            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
-          </div>
-          <div id="nav">
       <!-- Webpage Content -->
       <header>
         <div class="container_header">
@@ -88,47 +66,7 @@
           <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
           <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
         </div>
-      </section>
-      <!-- Drivers and Riders Section -->
-      <section class="drivers-riders">
-        <div class="container p-5 my-5 border">  
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="row">
-                <div class="col-sm-3">
-                  <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
-                </div>
-              </div>
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Need a Ride</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Give a Ride</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Testimonies</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">FAQs</a>
-                </li>  
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <!-- Hero Section -->
-      <section class="hero">
-        <div class="hero-content">         
-          <h2 class="hero-title">Ride Sharing</h2> 
-          <h3 class="hero-subtitle">The smarter way to travel!</h3>
-          <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
-          <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
-        </div>
-      </section>
+      </section>      
       <!-- Drivers and Riders Section -->
       <section class="drivers-riders">
         <div class="container p-5 my-5 border">  
@@ -140,9 +78,7 @@
                 </div>
               </div>
                 <h3>Become a Driver</h3>
-                Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.
-              <div>
-                Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.
+                <p1>Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.</p1>
               <div>
                 <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
               </div>
@@ -155,7 +91,7 @@
                 </div>
               </div>
               <h3>Become a Rider</h3>
-              Search for the available ride and save money. You may book and pay online for a hassle free journey.
+              <p1>Search for the available ride and save money. You may book and pay online for a hassle free journey.</p1>
               <div>
                 <button type="button" class="rider_learn_more" onclick="location.href='learnmore_rider.html'">Learn more...</button>
               </div>
@@ -170,88 +106,23 @@
           <h3>Testimonials</h3>
             <div class="container_testimonial">
               <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-              <p><span>John Fox.</span> IT Generalist Student.</p>
-              <p>I saved a lot. I was able to help reduce the carbon footprint.</p>
+              <p1><span>John Fox.</span> IT Generalist Student.</p1>
+              <p1>I saved a lot. I was able to help reduce the carbon footprint.</p1>
             </div>
             <div class="container_testimonial">
               <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-              <p><span>Haley Tan.</span> IT Generalist Student.</p>
-              <p>Had an amazing ride!</p>
+              <p1><span>Haley Tan.</span> IT Generalist Student.</p1>
+              <p1>Had an amazing ride!</p1>
             </div>
             <div class="container_testimonial">
               <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-              <p><span>Anonymous Member.</span> NSCC Student.</p>
-              <p>Cool service.</p>
+              <p1><span>Anonymous Member.</span> NSCC Student.</p1>
+              <p1>Cool service.</p>
             </div>
             <div class="container_testimonial">
               <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
-              <p><span>Teddy Wewers.</span> Faculty.</p>
-              <p>A great way to create a student community!</p>
-            </div>
-        </div>
-      </section>
-      <!-- FAQs Section -->
-      <section class="faqs">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-          <div class="container mt-3 p-5 my-5 border">
-            <h3>Frequenctly Asked Questions</h3>
-            <p><strong>Note:</strong> Here are some of the FAQs.</p>
-            <div id="accordion">
-              <div class="card">
-                <div class="card-header">
-                  <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                    I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
-                </div>
-                <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                  <div class="card-body">
-                    <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
-                </div>
-                <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                  <div class="card-body">
-                      Answer 2: To be updated soon.
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
-                </div>
-                <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                  <div class="card-body">
-                    Answer 3: To be updated soon.
-                  </div>
-        </div>
-      </section>
-      <!-- Testimonials -->
-      <section class="testimonies">
-        <div class="container p-5 my-5 border">
-          <h3>Testimonials</h3>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-              <p><span>John Fox.</span> IT Generalist Student.</p>
-              <p>I saved a lot. I was able to help reduce the carbon footprint.</p>
-            </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-              <p><span>Haley Tan.</span> IT Generalist Student.</p>
-              <p>Had an amazing ride!</p>
-            </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-              <p><span>Anonymous Member.</span> NSCC Student.</p>
-              <p>Cool service.</p>
-            </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
-              <p><span>Teddy Wewers.</span> Faculty.</p>
-              <p>A great way to create a student community!</p>
+              <p1><span>Teddy Wewers.</span> Faculty.</p1>
+              <p1>A great way to create a student community!</p1>
             </div>
         </div>
       </section>
@@ -296,15 +167,7 @@
                 </div>
               </div>
             </div>
-      </section>
-      <!-- Footer -->
-      <footer>
-        <div class="container_footer">
-          <p>© 2023 Johnjie Alzate</p>
-        </div>
-      </footer>
-            </div>
-      </section>
+      </section>     
       <!-- Footer -->
       <footer>
         <div class="container_footer">
