--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -4,6 +4,7 @@
         <title>The Flick PPoet</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="=width=device-width" intial-scale="1.0">
+        <link rel="stylesheet" href="style.css">
         <!-- Boostrap CSS link-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <!-- Boostrap JS -->
@@ -11,7 +12,7 @@
     </head>
     <body>
         <head><div class="head"></div></head>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                 <a>The Flick Poet</a>
                 <div id="nav">
@@ -41,9 +42,41 @@
             <div class="hero-content">         
                 <h2 class="hero-title">The Flick Poet</h2> 
                 <h3 class="hero-subtitle">Art of Storytelling</h3>
-                <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
-                <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
+                <button type="button" class="hero-button" onclick="location.href='browse_our_catalog.html'">Browse our catalog</button>
+                <button type="button" class="hero-button" onclick="location.href='contact_us.html'">Contact us</button>
             </div> 
         </Section>
+              <!-- Drivers and Riders Section -->
+        <section class="drivers-riders">
+            <div class="container p-5 my-5 border">
+                <h3>Become a Driver</h3>
+                <p>How it works
+                    Here’s what you need to know before getting started with the navbar:
+                    
+                    Navbars require a wrapping .navbar with .navbar-expand{-sm|-md|-lg|-xl|-xxl} for responsive collapsing and color scheme classes.
+                    Navbars and their contents are fluid by default. Change the container to limit their horizontal width in different ways.
+                    Use our spacing and flex utility classes for controlling spacing and alignment within navbars.
+                    Navbars are responsive by default, but you can easily modify them to change that. Responsive behavior depends on our Collapse JavaScript plugin.
+                    Ensure accessibility by using a element or, if using a more generic element such as a div add a role="navigation" to every navbar to explicitly identify it as a landmark region for users of assistive technologies.
+                    Indicate the current item by using aria-current="page" for the current page or aria-current="true" for the current item in a set.</p>
+            </div>
+        </section>
+        <!-- Testimonials -->
+        <section class="testimonies">
+            <div class="container p-5 my-5 border">
+            <h3>Testimonials</h3>
+            </div>
+        </section>
+        <!-- FAQs Section -->
+        <section class="faqs">
+            <div class="container mt-3 p-5 my-5 border">
+                <h3>Frequenctly Asked Questions</h3>
+        </section>     
+        <!-- Footer -->
+        <footer>
+            <div class="container_footer">
+            <p>© 2023 Johnjie Alzate</p>
+            </div>
+        </footer>
     </body>
 </html>
