--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -41,23 +41,23 @@
                 <a class="nav-link" href="">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Need a Ride</a>
+                <a class="nav-link" href="#hero">Need a Ride</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Give a Ride</a>
+                <a class="nav-link" href="#hero">Give a Ride</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Testimonies</a>
+                <a class="nav-link" href="#testimonies">Testimonies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">FAQs</a>
+                <a class="nav-link" href="#faqs">FAQs</a>
               </li>  
             </ul>
           </div>
         </div>
       </nav>
       <!-- Hero Section -->
-      <section class="hero">
+      <section class="hero" id="hero">
         <div class="hero-content">         
           <h2 class="hero-title">Ride Sharing</h2> 
           <h3 class="hero-subtitle">The smarter way to travel!</h3>
@@ -66,7 +66,7 @@
         </div>
       </section>      
       <!-- Drivers and Riders Section -->
-      <section class="drivers-riders">
+      <section class="drivers-riders" id="drivers_riders">
         <div class="container p-5 my-5 border">  
           <div class="row">
             <div class="col-sm-6">
@@ -99,7 +99,7 @@
         </div>
       </section>
       <!-- Testimonials -->
-      <section class="testimonies">
+      <section class="testimonies" id="testimonies">
         <div class="container p-5 my-5 border">
           <h3>Testimonials</h3>
             <div class="container_testimonial">
@@ -125,7 +125,7 @@
         </div>
       </section>
       <!-- FAQs Section -->
-      <section class="faqs">
+      <section class="faqs" id="faqs">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
           <div class="container mt-3 p-5 my-5 border">
