--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -26,11 +26,12 @@
           <h1>Welcome to Your Ride Sharing</h1>
         </div>
       </header>
-      <!-- Navigation Bar-->
+      <!-- Main Content -->
       <main>
+        <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a>
+            <a class="navbar-brand">
               <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +53,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#faqs">FAQs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#safety">Safety</a>
                 </li>  
               </ul>
             </div>
@@ -67,7 +71,7 @@
           </div>
         </section>      
         <!-- Drivers and Riders Section -->
-        <section class="drivers-riders" id="drivers_riders">
+        <section id="drivers-riders">
           <div class="container p-5 my-5 border">  
             <div class="row">
               <div class="col-sm-6">
@@ -99,8 +103,8 @@
             </div>
           </div>
         </section>
-        <!-- Testimonials -->
-        <section class="testimonies" id="testimonies">
+        <!-- Testimonials Section -->
+        <section id="testimonies">
           <div class="container p-5 my-5 border">
             <h3>Testimonials</h3>
               <div class="container_testimonial">
@@ -126,50 +130,57 @@
           </div>
         </section>
         <!-- FAQs Section -->
-        <section class="faqs" id="faqs">
+        <section id="faqs">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-            <div class="container mt-3 p-5 my-5 border">
-              <h3>Frequenctly Asked Questions</h3>
-              <p><strong>Note:</strong> Here are some of the FAQs.</p>
-              <div id="accordion">
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                      I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
-                  </div>
-                  <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                    <div class="card-body">
-                      <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
-                    </div>
-                  </div>
+          <div class="container mt-3 p-5 my-5 border">
+            <h3>Frequenctly Asked Questions</h3>
+            <p><strong>Note:</strong> Here are some of the FAQs.</p>
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                    I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
                 </div>
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
-                  </div>
-                  <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Answer 2: To be updated soon.
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
-                  </div>
-                  <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                    <div class="card-body">
-                      Answer 3: To be updated soon.
-                    </div>
-                    </div>
+                <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+                  <div class="card-body">
+                    <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
                   </div>
                 </div>
               </div>
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                </div>
+                <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+                  <div class="card-body">
+                      Answer 2: To be updated soon.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                </div>
+                <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+                  <div class="card-body">
+                    Answer 3: To be updated soon.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Safety Section -->
+        <section id="safety">
+          <div class="container mt-3 p-5 my-5 border">
+            <h3>Safety</h3>
+            <p1>This section  is for safety.</p1>
+          </div>
         </section>     
         <!-- Footer -->
         <footer>
-          <div class="container_footer">
+          <div id="footer">
             <p>© 2023 Johnjie Alzate</p>
           </div>
         </footer>
