--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -11,9 +11,11 @@
 <html lang="en">
     <head>
       <title>NSCC - Ride Sharing</title>
+      <!-- Add icon link -->
+      <link rel="icon" href="../RideShareSite/images/NRS.png" type="image/x-icon">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css">      
       <!-- Boostrap CSS link-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
       <!-- Boostrap JS -->
