--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -71,15 +71,20 @@
             <h2 class="hero-title">Ride Sharing</h2> 
             <h3 class="hero-subtitle">The smarter way to travel!</h3>
             <form>
-              <div id="form">
-              <input class="pickup" type="text" placeholder="Pick-up location" name="pickup_location"  required>
-              </div>
-              <div id="form">
-                <input class="dropoff" type="text" placeholder="Drop-off location" name="dropoff_location"  required>
-              </div>
-              <div id="form">
+              <div class="row">
+                <div class="col-2"></div>
+              <div class="col-8">
+                <div id="form">
+                  <input class="pickup" type="text" placeholder="Pick-up location" name="pickup_location"  required>
+                </div>
+                <div id="form">
+                  <input class="dropoff" type="text" placeholder="Drop-off location" name="dropoff_location"  required>
+                </div>
+                <div id="form">
                 <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
-            </div>
+                </div>
+              </div>
+              <div class="2"></div>
             </form>
           </div>
         </section>      
