--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -194,7 +194,7 @@
         <section id="safety">
           <div class="container mt-3 p-5 my-5 border">
             <h3>Safety</h3>
-            <p1>Great travel experience for NSCC students is our core process and in line with this is the <strong>SAFETY</strong> of everyone as our top priority.</p1>
+            <p1>Convenient travel experience for NSCC students is our core process while we priorize <strong>SAFETY</strong>.</p1>
           </div>
         </section>     
         <!-- Footer -->
