--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -169,21 +169,21 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Is registration needed to be able to avail the ride sharing service?</a1>
                 </div>
                 <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
-                      Answer 2: To be updated soon.
+                      <strong>Yes</strong>, a user should register first to be able to book a shared ride.
                   </div>
                 </div>
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sahring be available for students.</a1>
                 </div>
                 <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
-                    Answer 3: To be updated soon.
+                    An ongoing project has already been started and its timeline will soon be posted. Beta version of the web application is currently ongoing.
                   </div>
                 </div>
               </div>
